--- a/MyApp/src/app/photos/photos.component.html
+++ b/MyApp/src/app/photos/photos.component.html
@@ -18,5 +18,5 @@
 <GridLayout class="page__content">
     <Label class="page__content-icon fas" text="&#xf005;"></Label>
     <Label class="page__content-placeholder" text="Photos"></Label>
-    <Button text="Ver foto Destacada" [nsRouterLink]="['/photos/destacadas']" pageTransition="slide" clearHistory="true"></Button>    
+    <Button text="Ver" pageTransition="slide" clearHistory="true"></Button>    
 </GridLayout>
