--- a/MyApp/src/app/search/search.component.html
+++ b/MyApp/src/app/search/search.component.html
@@ -17,5 +17,14 @@
 
 <GridLayout class="page__content">
     <Label class="page__content-icon fas" text="&#xf002;"></Label>
-    <Label class="page__content-placeholder" text="<!-- Page content goes here -->"></Label>
+    <ListView class="list-group" [items]="this.news.buscar()" (itemTap)="onItemTap($event)"
+        style="height:1250px">
+            <ng-template let-x="item">
+                <FlexboxLayout flexDirection="row" class="list-group-item">
+                    <Image src="res://icon" class="thumb img-circle"></Image>
+                    <Label [text]="x" class="list-group-item-heading"
+                        verticalAlignment="center" style="width: 60%"></Label>
+                </FlexboxLayout>
+            </ng-template>
+        </ListView>    
 </GridLayout>
