--- a/MyApp/src/app/search/search.component.html
+++ b/MyApp/src/app/search/search.component.html
@@ -17,14 +17,21 @@
 
 <GridLayout class="page__content">
     <Label class="page__content-icon fas" text="&#xf002;"></Label>
-    <ListView class="list-group" [items]="this.news.buscar()" (itemTap)="onItemTap($event)"
-        style="height:1250px">
-            <ng-template let-x="item">
-                <FlexboxLayout flexDirection="row" class="list-group-item">
-                    <Image src="res://icon" class="thumb img-circle"></Image>
-                    <Label [text]="x" class="list-group-item-heading"
-                        verticalAlignment="center" style="width: 60%"></Label>
-                </FlexboxLayout>
-            </ng-template>
-        </ListView>    
+    <PullToRefresh (refresh)="onPull($event)">
+        <ListView class="list-group" [items]="this.news.buscar()" (itemTap)="onItemTap($event)"
+            style="height:1250px">
+                <ng-template let-x="item">
+                    <FlexboxLayout flexDirection="row" class="list-group-item">
+                        <Image src="res://icon" class="thumb img-circle"></Image>
+                        <Label [text]="x" class="list-group-item-heading"
+                            verticalAlignment="center" style="width: 60%"></Label>
+                    </FlexboxLayout>
+                    <GridLayout columns="auto,*,auto" rows="auto,25" verticalAlignment="top" backgroundColor="lightgray">
+                        <Image src="~/icon.jpg" rowSpan="2" width="72" heigth="72" margin="3" verticalAlignment="top"></Image>
+                        <Label text="Excelente" textWrap="true" col="1" colSpan="2" minHeight="50" fontSize="20" margin="3"></Label>
+                        <Label text="Puntaje: 4.3" col="2" row="1" color="#10C2BO" fontSize="14" verticalAlignment="bottom" margin="3"></Label>
+                    </GridLayout>
+                </ng-template>
+            </ListView>    
+    </PullToRefresh>
 </GridLayout>
